kubernetes/clusters/home/apps/cert-manager/base/network-policies.yml
---
# TODO(cert-manager): beef up network policies with cilium network policies

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-inbound-metric-collection
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
          # podSelector:
          #   matchLabels:
          #     app.kubernetes.io/instance: SELECTORLABELS
      ports:
        - port: 9402
          protocol: TCP
  podSelector:
    matchLabels:
      app: cert-manager
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: cert-manager
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-inbound-webhook
spec:
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: webhook
      app.kubernetes.io/name: webhook
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-outbound-http
spec:
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
  podSelector: {}
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-outbound-dns
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 53
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
  podSelector: {}
  policyTypes:
    - Egress
